# myHealth

./: .env  Cargo.toml  README.md  configuration.yaml
.github/workflows/: rust.yaml
configuration/: base.yaml
migrations/: 20210304041816_usuario.sql  20210321185907_horarios.sql  20210410013210_agendamentos.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs
src/controllers/: agendamentos.rs  horarios.rs  mod.rs  user.rs  users.rs  usuario.rs  usuarios.rs
src/routes/: index.rs  mod.rs
tests/api/: agendamentos.rs  healpers.rs  helpers.rs  horarios.rs  main.rs  usuario.rs
